--- a/10-Programming-Cues-and-Scenes.Rmd
+++ b/10-Programming-Cues-and-Scenes.Rmd
@@ -259,7 +259,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
     
 4.  Valid Cue numbers per Qlist = 000.001 → 999.999
     
-5. Addition cues may be stored via keypad syntax specifying the Qlist # in advance or [10.3. Storing Cues and Scenes Directly to Controllers](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-cues-and-scenes-directly-to-controllers)​
+5. Addition cues may be stored via keypad syntax specifying the Qlist # in advance or [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.)​
 
 
 
@@ -314,11 +314,13 @@ In the process of storing a cue, a number of filters and settings are available.
 	- <span style="color:MediumAquaMarine">{Qonly} Inserted cues will not affect the look of cues following them</span>
     
 
--   Look Ahead: (sometimes referred to as Mark Cue) [See: 15.3. Force Black](https://vibemanual.compulite.com/dark-parameter-positioning.html#force-black) 
+-   Look Ahead: (sometimes referred to as Mark Cue) [See: 15.3. Force Black](#ForceBlack-15.3.) 
+
 	- Unlike having to Look Ahead automatically preposition all dark parameters for all cues in a Qlist, a cue tagged in **Cue Store Options** as {Look Ahead} will preposition dark parameters for just the tagged cue.
     
 
--   Force Black - See: [15.1. Look Ahead (Move in Dark)](https://vibemanual.compulite.com/dark-parameter-positioning.html#look-ahead-move-in-dark) 
+-   Force Black - See: [15.1. Look Ahead (Move in Dark)](#LookAhead-15.1.) 
+
 	-  Tagged a cue as {Force Black} in Cue Store Options, is the same as setting the cue as {Force Black} in {Cue settings}.
 
 
@@ -524,14 +526,14 @@ Cue Settings pop-up
 
 **Cue Time Properties:**
 
--   [10.11.1. Assigning Cue Time](https://vibemanual.compulite.com/programming-cues-and-scenes.html#assigning-cue-time)
+-   [10.11.1. Assigning Cue Time](#assigning-cue-time-10.11.1.)
     
--   [10.11.2. Wait and Follow Times](https://vibemanual.compulite.com/programming-cues-and-scenes.html#wait-and-follow-times)
+-   [10.11.2. Wait and Follow Times](#wait-and-follow-times-10.11.2.)
 
 
 
 
-###  Assigning Cue Time
+###  Assigning Cue Time {#assigning-cue-time-10.11.1}
 
 **Cues may be assigned the following time properties:**
 
@@ -599,7 +601,7 @@ Alternately times can be randomly entering by tapping the desired time field and
 
 
 
-###  Wait and Follow Times
+###  Wait and Follow Times {#wait-and-follow-times-10.11.2.}
 
 **There are two ways to make a cue automatically follow another:**
 
@@ -635,15 +637,15 @@ Alternately times can be randomly entering by tapping the desired time field and
 
 Additional Cue Properties:
 
--   ​[10.12.1. Link](https://vibemanual.compulite.com/programming-cues-and-scenes.html#link)​
+-   ​[10.12.1. Link](#link-10.12.1.)​
     
--   ​[10.12.2. Loop](https://vibemanual.compulite.com/programming-cues-and-scenes.html#loop)​
+-   ​[10.12.2. Loop](#loop-10.12.2.)​
     
--   ​[10.12.3. Tracking Options](https://vibemanual.compulite.com/programming-cues-and-scenes.html#tracking-options)
+-   ​[10.12.3. Tracking Options](#tracking-options-10.12.3.).
 
 
 
-### Link
+### Link {#link-10.12.1.}
 
 Cues may be linked out of sequence using any of the following three methods: 
 
@@ -702,7 +704,7 @@ Cues may be linked out of sequence using any of the following three methods:
 
 
 
-### Loop
+### Loop {#loop-10.12.2.}
 
 In many consoles, the only way to create a loop is to create a link from the end of a range of cues back to the beginning. Follow time must then be assigned to all of the cues. In Vibe this is also possible but a shorter more efficient method is also provided. **LOOP** is a function similar to **LINK**. It is assigned in the Loop pop-up or via the Cue Settings pop-up.
 
@@ -782,7 +784,7 @@ In many consoles, the only way to create a loop is to create a link from the end
 -   Press [RELEASE] to remove the loop.
 
 
-### Tracking Options
+### Tracking Options {#tracking-options-10.12.3.}
 
 
 
@@ -812,14 +814,14 @@ In many consoles, the only way to create a loop is to create a link from the end
 
 **Parameter Time:**
 
--   [10.13.1. Assign Parameter Time During Cue Creation](https://vibemanual.compulite.com/programming-cues-and-scenes.html#assign-parameter-time-during-cue-creation)
+-   [10.13.1. Assign Parameter Time During Cue Creation](#assign-parameter-time-during-cue-creation-10.13.1.)
     
--   [10.13.2. Adding or Modifying Parameter Time after Cue Creation](https://vibemanual.compulite.com/programming-cues-and-scenes.html#adding-or-modifying-parameter-time-after-cue-creation)
+-   [10.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.)
     
--   [10.13.3. Fanning Parameter Time](https://vibemanual.compulite.com/programming-cues-and-scenes.html#fanning-parameter-time)
+-   [10.13.3. Fanning Parameter Time Time](#fanning-parameter-time-10.13.3.)
 
 
-### Assign Parameter Time During Cue Creation
+### Assign Parameter Time During Cue Creation {#assign-parameter-time-during-cue-creation-10.13.1.}
 
 
 1.  Set fixture parameter values in the Editor.
@@ -845,9 +847,9 @@ In many consoles, the only way to create a loop is to create a link from the end
     
 8.  Store the Cue using any of the methods described under: 
 
--   [10.3. Storing Cues and Scenes Directly to Controllers](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-cues-and-scenes-directly-to-controllers) 
--   [10.5. Storing Cues to the Master Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-cues-to-the-master-controller) 
--   [10.6. Storing Qlist Cues to any Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-qlist-cues-to-any-controller)
+-   [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.) 
+-   [10.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-10.5.) 
+-   [10.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-10.6.)
     
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FVMwWaGG9Qr6NDEWLQKOl%2F10.13.1%20parameter%20time.png?alt=media&token=55487d5d-9035-4083-a55e-a02b0b0573a4)
@@ -858,7 +860,7 @@ In many consoles, the only way to create a loop is to create a link from the end
 
 
 
-### Adding or Modifying Parameter Time after Cue Creation
+### Adding or Modifying Parameter Time after Cue Creation {#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.}
 
 
 **Method 1:**
@@ -883,7 +885,7 @@ In many consoles, the only way to create a loop is to create a link from the end
     
 7. Press [UPDATE]. 
 
-See Also: [10.9. Modifying Cues and Scenes](https://vibemanual.compulite.com/programming-cues-and-scenes.html#modifying-cues-and-scenes)
+See Also: [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
     
 
 **Method 2:**
@@ -930,7 +932,7 @@ See Also: [10.9. Modifying Cues and Scenes](https://vibemanual.compulite.com/pro
 
 
 
-### Fanning Parameter Time
+### Fanning Parameter Time #fanning-parameter-time-10.13.3.
 
 
 **Method 1:**
@@ -992,7 +994,7 @@ See Also: [10.9. Modifying Cues and Scenes](https://vibemanual.compulite.com/pro
 
 **Remove a fanned parameter time:** 
 
-See: [10.13.2. Adding or Modifying Parameter Time after Cue Creation](https://vibemanual.compulite.com/programming-cues-and-scenes.html#adding-or-modifying-parameter-time-after-cue-creation)
+See: [10.13.2. Adding or Modifying Parameter Time after Cue Creation](#Adding-or-Modifying-Parameter-Time-after-Cue-Creation-10.13.2.)
 
 
 **Cell Time Fan**
@@ -1059,14 +1061,14 @@ User may apply the popup with nothing selected on the options or with all the op
 
 **Group Submasters:**
 
--   [10.15.1. Convert a Scene into a Group Submaster](https://vibemanual.compulite.com/programming-cues-and-scenes.html#convert-a-scene-into-a-group-submaster)
+-   [10.15.1. Convert a Scene into a Group Submaster](#convert-a-scene-into-a-group-submaster-10.15.1.)
     
--   [10.15.2. Assign a Group Submater directly to a Slider Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#assign-a-group-submater-directly-to-a-slider-controller)
+-   [10.15.2. Assign a Group Submater directly to a Slider Controller](#assign-a-group-submater-directly-to-a-slider-controller-10.15.2.)
     
--   [10.15.3. Assign a Group Submaster using existing Groups](https://vibemanual.compulite.com/programming-cues-and-scenes.html#assign-a-group-submaster-using-existing-groups)
+-   [10.15.3. Assign a Group Submaster using existing Groups](#assign-a-group-submaster-using-existing-groups-10.15.3.)
 
 
-### Convert a Scene into a Group Submaster
+### Convert a Scene into a Group Submaster {#convert-a-scene-into-a-group-submaster-10.15.1.}
 
 
 Any Scene can be easily converted into a Group **Submaster** (Known in some consoles as Inhibitive Submasters or Group Masters).
@@ -1097,7 +1099,7 @@ All fixtures in the Scene will now act as Group Submasters. Scene fixture values
 
 
 
-### Assign a Group Submater directly to a Slider Controller
+### Assign a Group Submater directly to a Slider Controller {#assign-a-group-submater-directly-to-a-slider-controller-10.15.2.}
 
 
 1.  Specify a fixture selection but **do not** assign editor values.
@@ -1110,7 +1112,7 @@ All fixtures in the Scene will now act as Group Submasters. Scene fixture values
 ><span style="color:Red">When the slider handle is down, the [Top Button] will flash to indicate that levels are being inhibited. When it is at full, the button's blue backlight will go steady.</span>
 
 
-### Assign a Group Submaster using existing Groups
+### Assign a Group Submaster using existing Groups {#assign-a-group-submaster-using-existing-groups-10.15.3.}
 
 
 **Assign a Group to a Slider Controller using keypad syntax:**
