--- a/13-Effects.Rmd
+++ b/13-Effects.Rmd
@@ -155,7 +155,7 @@ The Smart Screen Effects Editor allows users to quickly build effects within the
 
 
 
-### Building Effects Using the Small Screen Editor
+### Building Effects Using the Small Screen Editor {#building-effects-using-the-small-screen-editor-13.2.1.}
 
 **To build an Effect in the Smart Screen Effects Editor:**
 
@@ -296,13 +296,13 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 7. Tap a blank space in the **Effect Event Column** - an Effect Event will be created with a Primitive and Pattern .
 
-8. Adjust Pattern and Primitive settings - See [13.1. Effects Basics](https://vibemanual.compulite.com/effects-1.html#effect-basics)
+8. Adjust Pattern and Primitive settings - See [13.1. Effects Basics](#EffectBasics-13.1.)
 
 9. Close the Advanced editor using the ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FiqDovif3XQdSLCRmPgLg%2Fimage.png?alt=media&token=5fda6a67-cd96-4687-aa9e-78c3ae594e41) in the upper right corner.
 
 10. Store final Effect directly to a cue/scene or to the Effects Library.
 
-**Grouping:** See [13.2.1. Building Effects Using the Small Screen Editor](https://vibemanual.compulite.com/effects-1.html#building-effects-using-the-small-screen-editor) 
+**Grouping:** See [13.2.1. Building Effects Using the Small Screen Editor](#building-effects-using-the-small-screen-editor-13.2.1.) 
 
 **Blocks by Groups:**  Groups may be substituted for individual fixtures using this option.
 
@@ -411,7 +411,7 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 
 
-### Building Effects Using the Advanced Effects Editor
+### Building Effects Using the Advanced Effects Editor {#build-a-basic-effect-in-the-advanced-effects-editor-13.3.1.}
 
 
 13.3.1. Building Effects Using the Advanced Effects Editor
@@ -451,7 +451,7 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 **Grouping:**  
 
-See [13.2.1. Building Effects Using the Small Screen Editor](https://vibemanual.compulite.com/effects-1.html#building-effects-using-the-small-screen-editor)
+See [13.2.1. Building Effects Using the Small Screen Editor](#building-effects-using-the-small-screen-editor-13.2.1.)
 
 **Blocks by Groups:** - Groups may be substituted for individual fixtures using this option.
 
