--- a/18-Exam-show-data.Rmd
+++ b/18-Exam-show-data.Rmd
@@ -8,7 +8,7 @@ Virtually all Vibe show data can be viewed using the **Exam** display. The Exam 
 **The following is covered in this chapter:**
 
 - [18.1. Show Exam](#ShowExam-18.1.)
-- [18.2. Patch Exam](#)
+- [18.2. Patch Exam](#PatchExam-18.2.)
 
 
 ## Show Exam {#ShowExam-18.1.}
